[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hhshcc-sim"
version = "0.1.0"
description = "Simulate authentic HHS-HCC risk adjustment model input files from MEPS data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "C. Seth Lester", email = "cslester@gmail.com"},
]
dependencies = [
    "pandas>=2.0",
    "pyreadstat>=1.2",
    "openpyxl>=3.1",
    "requests>=2.31",
    "numpy>=1.24",
    "click>=8.1",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
hhshcc-sim = "hhshcc_sim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
